Added TestNamePrinter class, updated all test classes in Azure Core to extend it